add padding and margin

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swami Vivekanand</title>
     <style type="text/css">
+        *{
+            padding: 0px;
+            margin: 0px;
+        }
         .main{
             width: 70%;
             height: 1300px;
