--- a/index.html
+++ b/index.html
@@ -1,89 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swami Vivekanand</title>
     <style type="text/css">
-        *{
+        * {
             padding: 0px;
             margin: 0px;
         }
-        .main{
+
+        .main {
             width: 70%;
-            height: 1300px;
-            background-color:rgb(233, 117, 9);
+            height:1310px;
+            background-color: rgb(233, 117, 9);
             margin: auto;
             border: 2px solid black;
         }
-            .img{
-                width: 65%;
-                height: 400px;
-                border: 2px solid black;
-                margin: auto;
-                
-            }
-            .quote{
-                font-size: 25px;
-            }
-            .name{
-                text-align: center;
-                color: rgb(14, 11, 8);
-                font-size: 70px;
-            }
-            .about{
+
+        .img {
+            width: 65%;
+            height: 400px;
+            border: 2px solid black;
+            margin: auto;
+
+        }
+
+        .quote {
+            font-size: 25px;
+            padding-top: 20px;
+        }
+
+        .name {
+            text-align: center;
+            color: rgb(14, 11, 8);
+            font-size: 70px;
+        }
+
+        .about {
+            width: 100%;
+            height: 500px;
+            font-size: 20px;
+            margin: auto;
+            border: 2px solid black;
+            padding-left: 10px;
+            margin-top: 50px;
+            overflow: auto;
+            box-shadow: 0px 0px 10px 3px;
+            background-color: rgb(237, 129, 5, 1);
+
+        }
+
+        .more {
+            width: 100%;
+            height: 100px;
+            margin-top: 100px;
+            font-size: 25px;
+        }
+
+        @media only screen and (max-width:500px) {
+            .main {
                 width: 100%;
-                height: 500px;
-                font-size: 20px;
-                margin: auto;
-                border: 2px solid black;
-                padding-left: 10px;
-                overflow:auto;
-                box-shadow: 0px 0px 10px 3px;
-                background-color:rgb(237, 129, 5,1);
-                
+                height: 1460px;
             }
-            .more{
-                width: 100%;
-                height: 100px;
+            .img {
+            width: 85%;
+            height: 400px;
+        }
+        .name {
+            font-size: 50px;
+        }
+        }
+        @media only screen and (min-width:601px)and (max-width:900px) {
+            .main {
+                width: 80%;
             }
+            .img {
+            width: 75%;
+            height: 400px;
+        }
+        .name {
+            font-size: 50px;
+        }
+        }
     </style>
 </head>
+
 <body>
     <div class="main">
-    <h1 class="name">Swami Vivekanand</h1>
-    <div class="img">
-        <img src="vivekanand.jpg" width="100%" height="100%">
-        <div class="quote">
-            <p><i>We are what our thoughts have made us ; so take care what you thik. Words are secondary. Thoughts live;
-                they travel far.</i>
-            </p>
-        </div>
-        <div class="about">
-            <ul>
-            <p><b><li>Born:</li></b> January 12, 1863 Kolkata India</p>
-            <p><b><li>Died:</li></b> July 4, 1902 (aged 39) Kolkata India</p>
-            <p><b><li>Founder:</li></b> Ramakrishna Mission</p>
-            <p><b><li>Subjects Of Study:</li></b> Hinduism Vedanta</p>
-        </ul>
-            <p>Vivekananda, original name <b><i style="color: rgb(11, 52, 237);">Narendranath Datta</i></b>, Datta also spelled Dutt.</p>
-            <p>Hindu spiritual leader and reformer in India who attempted to combine Indian spirituality with Western material progress,
-                 maintaining that the two supplemented and complemented one another. His Absolute was a person’s own higher self;
-                 to labour for the benefit of humanity was the noblest endeavour.</p>
-            <p>Born into an upper-middle-class family of the Kayastha (scribes) caste in Bengal,
-                 he was educated at a Western-style university where he was exposed to Western philosophy,
-                  Christianity, and science. Social reform became a prominent element of Vivekananda’s thought,
-                   and he joined the Brahmo Samaj (Society of Brahma), dedicated to eliminating child marriage
-                    and illiteracy and determined to spread education among women and the lower castes.
-                     He later became the most-notable disciple of Ramakrishna,
-                 who demonstrated the essential unity of all religions.</p>
-        </div>
-        <div class="more">
-        <p>For more information, check out Swami Vivekanand on wikipedia.
-            <a href="https://en.wikipedia.org/wiki/Swami_Vivekananda" target="_blank">click here</a> </p>
+        <h1 class="name">Swami Vivekanand</h1>
+        <div class="img">
+            <img src="vivekanand.jpg" width="100%" height="100%">
+            <div class="quote">
+                <p><i><b>We are what our thoughts have made us ; so take care what you thik. Words are secondary. Thoughts
+                    live;
+                    they travel far.</b></i>
+                </p>
             </div>
+            <div class="about">
+                <ul>
+                    <p><b>
+                            <li>Born:</li>
+                        </b> January 12, 1863 Kolkata India</p>
+                    <p><b>
+                            <li>Died:</li>
+                        </b> July 4, 1902 (aged 39) Kolkata India</p>
+                    <p><b>
+                            <li>Founder:</li>
+                        </b> Ramakrishna Mission</p>
+                    <p><b>
+                            <li>Subjects Of Study:</li>
+                        </b> Hinduism Vedanta</p>
+                </ul>
+                <p>Vivekananda, original name <b><i style="color: rgb(11, 52, 237);">Narendranath Datta</i></b>, Datta
+                    also spelled Dutt.</p>
+                <p>Hindu spiritual leader and reformer in India who attempted to combine Indian spirituality with
+                    Western material progress,
+                    maintaining that the two supplemented and complemented one another. His Absolute was a person’s own
+                    higher self;
+                    to labour for the benefit of humanity was the noblest endeavour.</p>
+                <p>Born into an upper-middle-class family of the Kayastha (scribes) caste in Bengal,
+                    he was educated at a Western-style university where he was exposed to Western philosophy,
+                    Christianity, and science. Social reform became a prominent element of Vivekananda’s thought,
+                    and he joined the Brahmo Samaj (Society of Brahma), dedicated to eliminating child marriage
+                    and illiteracy and determined to spread education among women and the lower castes.
+                    He later became the most-notable disciple of Ramakrishna,
+                    who demonstrated the essential unity of all religions.</p>
+            </div>
+            <div class="more">
+                <p><b>For more information, check out Swami Vivekanand on wikipedia.</b>
+                    <a href="https://en.wikipedia.org/wiki/Swami_Vivekananda" target="_blank">click here</a>
+                </p>
+            </div>
+        </div>
     </div>
- </div>
 </body>
+
 </html>
