--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         .more {
             width: 100%;
             height: 100px;
-            margin-top: 80px;
+            margin-top: 70px;
             font-size: 25px;
         }
 
@@ -64,6 +64,7 @@
             .main {
                 width: 100%;
                 height: 1460px;
+                background-color: rgb(244, 244, 244);
             }
             .img {
             width: 85%;
@@ -76,6 +77,7 @@
         @media only screen and (min-width:601px)and (max-width:900px) {
             .main {
                 width: 80%;
+                
             }
             .img {
             width: 75%;
